Stable build without backoff

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,21 @@
 [env:ATmega328P]
 platform = atmelavr
 board = ATmega328P
-framework = arduino
+board_build.mcu = atmega328p
+board_build.f_cpu = 16000000L
+; build_unflags = -Os
+build_flags =
+    -D PRINT_ASSERT
+    -D DEBUG
+
+; use 'pio run -t program'
+[env:hopper_isp]
+platform = atmelavr
+board = ATmega328P
+board_build.f_cpu = 16000000L
+board_build.mcu = atmega328p
+upload_protocol = usbtiny
+target = program
+build_flags =
+    -D DEBUG
+    -D PROG_WIFI
