Adding remote calibration

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATmega328P]
-platform = atmelavr
-board = ATmega328P
-board_build.mcu = atmega328p
-board_build.f_cpu = 16000000L
-; build_unflags = -Os
-build_flags =
-    -D PRINT_ASSERT
-    -D DEBUG
+; [env:ATmega328P]
+; platform = atmelavr
+; board = ATmega328P
+; board_build.mcu = atmega328p
+; board_build.f_cpu = 16000000L
+; ; build_unflags = -Os
+; build_flags =
+;     -D PRINT_ASSERT
+;     -D DEBUG
 
 ; use 'pio run -t program'
 [env:hopper_isp]
@@ -26,6 +26,12 @@ board_build.f_cpu = 16000000L
 board_build.mcu = atmega328p
 upload_protocol = usbtiny
 target = program
+upload_flags = -e
 build_flags =
     -D DEBUG
     #-D PROG_WIFI
+    #-D DEBUG_BACKEND
+    -Wno-unused-function
+
+build_src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/>
+	-<drivers/*/arduino>
